from django.db import models


class Country(models.Model):
    name = models.CharField(max_length=255, verbose_name="Страна")

    def __str__(self):
        return self.name

    class Meta:
        verbose_name = "Страна"
        verbose_name_plural = "Страны"
